CloudNativePractices/cloud-platforms-java-k8s/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-cookies-db
spec:
  selector:
    matchLabels:
      app: fortune-cookies-db
  replicas: 1
  template:
    metadata:
      labels:
        app: fortune-cookies-db
    spec:
      containers:
        - name: app
          image: postgres:11-alpine
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: storage
              mountPath: /var/lib/postgresql/data
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: database
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-cookies-db
spec:
  selector:
    app: fortune-cookies-db
  ports:
    - name: db
      port: 5432
      targetPort: 5432
  type: ClusterIP
