CloudNativePractices/cloud-platforms-java-k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fortune-cookies
spec:
  selector:
    matchLabels:
      app: fortune-cookies
  replicas: 1
  template:
    metadata:
      labels:
        app: fortune-cookies
    spec:
      containers:
        - name: app
          image: cc-ms-k8s-training.common.repositories.cloud.sap/fortune-cookies-i344646:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
---
apiVersion: v1
kind: Service
metadata:
  name: fortune-cookies
spec:
  selector:
    app: fortune-cookies
  ports:
    - name: fortune-cookies
      port: 8080
      targetPort: 8080
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert.gardener.cloud/purpose: managed
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
  name: fortune-cookies
spec:
  rules:
    - host: app.ingress.fun.i344646.shoot.canary.k8s-hana.ondemand.com
      http:
        paths:
          - backend:
              service:
                name: fortune-cookies
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - app.ingress.fun.i344646.shoot.canary.k8s-hana.ondemand.com
      secretName: app-certs
